--- a/web/app/themes/helsinki-testbed/resources/assets/styles/partials/entry.scss
+++ b/web/app/themes/helsinki-testbed/resources/assets/styles/partials/entry.scss
@@ -45,6 +45,10 @@
   .post.type-post & {
     max-width: var(--content-width);
   }
+
+  .page.type-page & > * {
+    max-width: var(--content-width);
+  }
 }
 
 .entry-title {
